@@ -7,9 +7,9 @@
 	<title>Users' Guide</title>
 	 <subtitle>Publishing books, articles, papers and multi-volume sets with DocBook XML</subtitle>
 	 <productname>Publican</productname>
-	 <productnumber>2.5</productnumber>
+	 <productnumber>2.6</productnumber>
 	 <edition>1.3</edition>
-	 <pubsnumber>1</pubsnumber>
+	 <pubsnumber>2</pubsnumber>
 	 <abstract>
 		<para>
 			This book will help you install <application>Publican</application>. It also provides instructions for using Publican to create and publish DocBook XML-based books, articles and book sets. This guide assumes that you are already familiar with DocBook XML.
