@@ -8,6 +8,23 @@
 	 <simpara>
 		<revhistory>
 			<revision>
+				<revnumber>2.6-1</revnumber>
+				 <date>Wed Dec 15 2010</date>
+				 <author>
+					<firstname>Rüdiger</firstname>
+					 <surname>Landmann</surname>
+					 <email>r.landmann@redhat.com</email>
+
+				</author>
+				 <revdescription>
+					<simplelist>
+					  <member>Fix broken command example -- BZ#663211</member>
+					</simplelist>
+
+				</revdescription>
+
+			</revision>
+			<revision>
 				<revnumber>2.4-1</revnumber>
 				 <date>Wed Dec 1 2010</date>
 				 <author>
