@@ -75,7 +75,7 @@ mkdir Book_A Book_B
 			</step>
 			 <step>
 				<para>
-					Test your set by running the <command>publican build --formats=test langs=en-US</command> command.
+					Test your set by running the <command>publican build --formats=test --langs=en-US</command> command.
 				</para>
 
 			</step>
