@@ -21,7 +21,7 @@
 
 Name:           publican
 Version:        2.5
-Release:        1%{?dist}.t23
+Release:        1%{?dist}.t24
 Summary:        Common files and scripts for publishing with DocBook XML
 # For a breakdown of the licensing, refer to LICENSE
 License:        (GPLv2+ or Artistic) and CC0
